# TriangularMatrix-Dev

./: .clang-format  .gitignore  CMakeLists.txt  Hoppy.hpp  README.md  main.cpp
devtools/: Tools.hpp
src/: AntiHermitianMatrix.hpp  AntiSymmetricMatrix.hpp  Assign.hpp  Evaluator4TriangularCompressedMatrices.hpp  Evaluator4TriangularMatrices.hpp  ForwardDeclarations.hpp  HermitianMatrix.hpp  LowerTriangularMatrix.hpp  Map.hpp  MapBase4TriangularCompressed.hpp  MathExt.hpp  PlainTriangularCompressedObjectBase.hpp  PlainTriangularObjectBase.hpp  Regin.hpp  SymmetricMatrix.hpp  TriangularBase.hpp  TriangularBlock.hpp  TriangularCoeffsBase.hpp  TriangularCompressedBase.hpp  TriangularCompressedBlock.hpp  TriangularCompressedCoeffsBase.hpp  TriangularCompressedMatrices.hpp  TriangularCompressedMatrixBase.hpp  TriangularMatrices.hpp  TriangularMatrixBase.hpp  UpperTriangularMatrix.hpp
src/Old/: AntiHermitianMatrix.hpp  LowerTriangularMatrix.hpp  TriangularDenseStorage.hpp  TriangularMatrix.hpp  UpperTriangularMatrix.hpp
tests/: BasicTests.cpp  CMakeLists.txt
